# vscode

./: README.md  Readme.txt
Ring/: CMakeLists.txt  sdkconfig  (+2 more)
Ring/main/: CMakeLists.txt  Kconfig.projbuild  main.c
Ring/main/app/: app.c  app.h
Ring/main/app/inc/: iic_exio_demo.h  nvs_demo.h  ui.h
Ring/main/app/src/: iic_exio_demo.c  nvs_demo.c  ui.c
Ring/main/bsp/: bsp.c  bsp.h
Ring/main/bsp/inc/: bsp_adc.h  bsp_button.h  bsp_camera.h  bsp_iic.h  bsp_nvs.h  bsp_tca9554.h  bsp_xl9555.h
Ring/main/bsp/src/: bsp_adc.c  bsp_button.c  bsp_camera.c  bsp_iic.c  bsp_nvs.c  bsp_tca9554.c  bsp_xl9555.c
demo01/: CMakeLists.txt  Readme.txt
demo01-asio/main02/: CMakeLists.txt
demo01/3rdlibs/: CMakeLists.txt
demo01/3rdlibs/ffmpeg6.1/: findffmpeg.cmake
demo01/3rdlibs/sdl/: findsdl.cmake
demo01/3rdlibs/threadpool/: CMakeLists.txt  threadpool.h
demo01/Main/: CMakeLists.txt
demo01/Main/include/: clac.h  pch.hpp
demo01/Main/src/: clac.c  main.cpp
demo01/main04/: CMakeLists.txt  main04.cpp
demo01/main04/include/: session.h
demo01/main05/include/: Server.h  Session.h
demo01/main05/src/: Server.cpp
demo02-cmaketmp/: CMakeLists.txt
demo02-cmaketmp/3rdlibs/: CMakeLists.txt
demo02-cmaketmp/3rdlibs/FFmpeg/: ffmpeg-import.cmake
demo02-cmaketmp/3rdlibs/SDL2/: sdl2-import.cmake
demo02-cmaketmp/3rdlibs/SDL2-image/: sdl2_image-import.cmake
demo02-cmaketmp/src/: CMakeLists.txt  main.cpp
demo02/Main/: CMakeLists.txt
demo02/Main/src/: main.cpp
demo04/Main/: CMakeLists.txt
demo04/Main/src/: main.cpp
demo05/main/: CMakeLists.txt  main.cpp
demo06/: CMakeLists.txt  foo.cu  foo.cuh  main.cpp
demo08/main01/: CMakeLists.txt  main01.cpp
demo09/main01/: CMakeLists.txt
demo09/main01/include/: endpoint.h
demo09/main01/src/: endpoint.cpp
demo10/src/: CMakeLists.txt
vscode-arm-gcc/: CMakeLists.txt  CMakePresets.json
vscode-arm-gcc-threadx/: CMakeLists.txt  STM32F429BITx_FLASH.ld
vscode-arm-gcc-threadx/BSP/stm32/: CMakeLists.txt  bsp.c  bsp.h  stm32f4xx_it.c  system_stm32f4xx.c
vscode-arm-gcc-threadx/BSP/stm32/inc/: bsp_uart_fifo.h
vscode-arm-gcc-threadx/BSP/stm32/src/: bsp_timer.c  bsp_uart_fifo.c
vscode-arm-gcc-threadx/Drivers/: CMakeLists.txt
vscode-arm-gcc-threadx/Src/: main.c
vscode-arm-gcc-threadx/Src/inc/: main.h
vscode-arm-gcc-threadx/Threadx/: CMakeLists.txt
vscode-arm-gcc-threadx/Threadx/Port/: CMakeLists.txt
vscode-arm-gcc-threadx/Threadx/Port/src/: tx_initialize_low_level.S
vscode-arm-gcc-threadx/Toolchain/: gcc-arm-none-eabi.cmake
vscode-arm-gcc-threadx/cmake_build/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  demo05.elf  demo05.map
vscode-arm-gcc-threadx/cmake_build/Debug/.cache/clangd/index/: __stdarg___gnuc_va_list.h.FDE68F8F87F79818.idx  __stdarg___va_copy.h.C1D11C734DE29254.idx  __stdarg_va_arg.h.89E466227CC1835F.idx  __stdarg_va_copy.h.F0923401E1BAB57E.idx  __stdarg_va_list.h.28B67E12003E71EA.idx  bsp.c.FC18AD4BC49FDDE4.idx  bsp.h.CFBC98ECE111ABBA.idx  bsp_dwt.c.234FB173B0686BD7.idx  bsp_dwt.c.46E64F07C8598677.idx  bsp_dwt.h.5EDE5D3EEB667099.idx  bsp_ext_io.c.8BC4817AEFCCD89D.idx  bsp_ext_io.c.900674910E01D266.idx  bsp_ext_io.h.506CC7828A1C1033.idx  bsp_ext_io.h.CDA18CE081A56CD8.idx  bsp_key.c.1272EDDBD2214CE6.idx  bsp_led.c.A9ABE733A92C81A8.idx  bsp_led.h.4DCD4383329DC155.idx  bsp_timer.c.34A4604049BF19D5.idx  bsp_timer.h.8E6E745DC3109DB2.idx  bsp_uart_fifo.c.3EBAF1B1D9ABC6BF.idx  bsp_uart_fifo.h.80D1BA3FDBA36A6E.idx  core_cm4.h.497DC43DF0A557F9.idx  core_cm4.h.CA91148D9F539E5C.idx  core_cmFunc.h.7CAE22327D2075F1.idx  core_cmFunc.h.E4F8588064E0E61D.idx  core_cmInstr.h.AB71D92D963C6850.idx  core_cmSimd.h.697F0ABD7B1EA886.idx  core_cmSimd.h.EE73DB73AB529A49.idx  main.c.13FD95D44D4F0090.idx  main.h.B201A94A526695AE.idx  misc.c.437157A7BF2F70A8.idx  misc.h.79071B59A5898134.idx  startup_stm32f429xx.s.A7FB2C75491A0E00.idx  stdarg.h.A425C6A9CEE4621B.idx  stdint.h.A31111891C0040E5.idx  stm32f4xx.h.73BB91990BC1F719.idx  stm32f4xx.h.D07862BD3DD9A6C2.idx  (+330 more)
vscode-arm-gcc-threadx/cmake_build/Debug/BSP/stm32/: cmake_install.cmake
vscode-arm-gcc-threadx/cmake_build/Debug/Drivers/: cmake_install.cmake
vscode-arm-gcc-threadx/cmake_build/Debug/Src/: cmake_install.cmake
vscode-arm-gcc-threadx/cmake_build/Debug/Threadx/: cmake_install.cmake
vscode-arm-gcc-threadx/cmake_build/Debug/Threadx/Port/: cmake_install.cmake
vscode-arm-gcc-threadx/cmake_build/Debug/Threadx/Src/: cmake_install.cmake
vscode-arm-gcc/BSP/stm32/: CMakeLists.txt  bsp.c  bsp.h  stm32f4xx_it.c  stm32f4xx_it.h
vscode-arm-gcc/BSP/stm32/src/: bsp_ext_io.c
vscode-arm-gcc/Drivers/: CMakeLists.txt
vscode-arm-gcc/Src/: CMakeLists.txt  main.c
vscode-arm-gcc/Src/inc/: main.h
vscode-arm-gcc/Toolchain/: gcc-arm-none-eabi.cmake
vscode-arm-gcc/cmake_build/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  demo05.elf  demo05.map
vscode-arm-gcc/cmake_build/Debug/BSP/stm32/: cmake_install.cmake
vscode-arm-gcc/cmake_build/Debug/Drivers/: cmake_install.cmake
vscode-arm-gcc/cmake_build/Debug/Src/: cmake_install.cmake
vscode-arm-gcc_HAL/: CMakeLists.txt  CMakePresets.json
vscode-arm-gcc_HAL/BSP/STM32F4/: CMakeLists.txt  bsp.c  bsp.h
vscode-arm-gcc_HAL/BSP/STM32F4/src/: bsp_fmc_io.c  bsp_timer.c  bsp_uart_fifo.c
vscode-arm-gcc_HAL/Drivers/STM32F4/: CMakeLists.txt
vscode-arm-gcc_HAL/Launch/STM32F4/: openocd-stm32f4-stlink.cfg
vscode-arm-gcc_HAL/Src/STM32F4/: CMakeLists.txt  main.c
vscode-arm-gcc_HAL/Src/STM32F4/inc/: main.h
vscode-arm-gcc_HAL/Toolchain/STM32F4/: gcc-arm-none-eabi.cmake
vscode-arm-gcc_HAL/cmake_build/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  gcc_hal.elf  gcc_hal.map
vscode-arm-gcc_HAL/cmake_build/Debug/BSP/STM32F4/: cmake_install.cmake
vscode-arm-gcc_HAL/cmake_build/Debug/Drivers/STM32F4/: cmake_install.cmake
vscode-arm-gcc_HAL/cmake_build/Debug/Src/: cmake_install.cmake
vscode-arm-gcc_HAL/cmake_build/Debug/Src/STM32F4/: cmake_install.cmake
(+5012 files in other folders)
